@@ -12,6 +12,7 @@
 #admin-menu li.admin-menu-users img { margin-top: 1px; }
 #admin-menu li.admin-menu-action { float: right; }
 #admin-menu li.admin-menu-action a { border-left: 1px solid #323232; border-right: none; }
+body.admin-menu { margin-top: 20px !important; }
 
 /* all lists */
 #admin-menu, #admin-menu ul { padding: 0; margin: 0; list-style: none; line-height: 1.4em; z-index: 999; }
