@@ -10,6 +10,7 @@ Admin Menu 5.x-2.x, xxxx-xx-xx
 
 Admin Menu 5.x-2.4, 2008-02-24
 ------------------------------
+#214740 by sun: Regression: Fixed directly applied marginTop not supported by IE.
 #214725 by sun: Fixed wrong CSS id in admin_menu.js (missed in 5.x-2.3).
 
 
